Toolbar. Node remover

--- a/example.html
+++ b/example.html
@@ -9,11 +9,16 @@
         html, body {
             margin: 0;
             padding: 0;
-            height: 100%;
+        }
+        #id123 {
+            border: 1px solid gray;
+            margin: 10px;
+            width: 800px;
+            height: 800px;
         }
     </style>
 </head>
 <body>
-    <Flowchart id="id123" class="just-to-be-here"></Flowchart>
+    <Flowchart id="id123"></Flowchart>
 </body>
 </html>
